@@ -13,15 +13,12 @@ BUGS:
 
 FEATURES:
 9 Add more tests.
-9 <C-o>/<C-i> should work as in Vim (i.e., save page positions as well as
-  locations in the history list).
 9 clean up error message codes and document
 9 option groups
 9 global, window-local, tab-local, buffer-local, script-local groups
 9 add [count] support to :b* and :tab* commands where missing
 8 wherever possible: get rid of dialogs and ask console-like dialog questions
   or write error prompts directly on the webpage or with :echo()
-8 registers
 8 add support for filename special characters such as %
 8 :redir and 'verbosefile'
 8 Add information to dactyl/HACKING file about testing and optimization
